--- a/demo.html
+++ b/demo.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta />
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
     <script src="backbone.metricmanager.js"></script>
     <script src="ExampleView.js"></script>
     <script type="text/javascript">var _gaq = _gaq || [];
@@ -22,7 +21,7 @@
         mixpanel.init("12b5c9ed3b8ca94f2294c7b56defbf2a");</script>
   </head>
   <body>
-    <span>Click the buttons to trigger the events using the metric manager</span><br /><span>This demo supplies callbacks to show that the events get registered.</span><br /><br />
+    <span>Click the buttons to trigger the events using the metric manager</span><br /><span>This demo supplies callbacks to Mixpanel and GA to show that the events get registered.</span><br /><br />
     <div class="example">
       <button class="shareTwitter">Share to Twitter (not really)</button><button class="purchase">Purchase me</button><br /><span class="result"></span>
     </div>
